# Control-of-Mobile-Robots-Polimi

Homeworks/proportional_control/: package.xml
Homeworks/proportional_control/bags/: new_simulation_bag.bag
Homeworks/proportional_control/config/: unicycle_kin_sim.yaml
Homeworks/proportional_control/script/: plot_results.py
Homeworks/proportional_control/src/: unicycle_kin_trajctrl.cpp
Homeworks/ros_basics/: CMakeLists.txt  package.xml
Homeworks/ros_basics/launch/: project.launch
Homeworks/ros_basics/src/: counter.cpp  sumup.cpp  system_clock.cpp
Homeworks/simulator/bags/: simulation_bag.bag
Homeworks/simulator/script/: plot_result.py
Homeworks/simulator/src/: test_circumference.cpp  unicycle_kin_ode.cpp
Labs/lab2/bicycle_sim/: CMakeLists.txt
Labs/lab2/bicycle_sim/launch/: test_bicycle_circle.launch  test_bicycle_step.launch
Labs/lab2/bicycle_sim/src/: test_circle.cpp  test_circle_node.cpp  test_eight.cpp  test_step.cpp  test_step_node.cpp
Labs/lab2/singletrack_sim/: CMakeLists.txt
Labs/lab2/singletrack_sim/launch/: test_singletrack_circle.launch  test_singletrack_step.launch
Labs/lab2/singletrack_sim/src/: test_circle.cpp  test_circle_node.cpp  (+3 more)
Labs/lab3/: PRM_connDist_analysis.m  PRM_example.m  PRM_numNodes_analysis.m  RRT_analysis.m  RRT_example.m
Labs/lab4/: RRT_RRTstar_comparison.m  RRTstar_analysis.m  RRTstar_example.m
Labs/lab5/bicycle_kin_ctrl/: CMakeLists.txt  package.xml
Labs/lab5/unicycle_kin_ctrl/: CMakeLists.txt  package.xml
Labs/lab6/bicycle_kin_ctrl/: CMakeLists.txt
Labs/lab6/unicycle_kin_ctrl/: CMakeLists.txt
(+88 files in other folders)
